# BIICC-2023

./: .gitignore  Metricas-para-rankings.md  README.md  pyproject.toml
Lecturas/: README.md  fasttext.md
dimensions/generator/: experiment.py  ranking.py  reddit_posts.py
dimensions/tests/: test_ranking.py
docs/: Metricas-para-rankings.md  fasttext.md
experiments/: app.py  append_files.py  fasttext_experiment.py  main.py  pyproject.toml  read_file.py  reddit_dataset.py  requirements.txt
experiments/experiments/: app.py  dimension_generator.py  experiment.py  fasttext_experiment.py  options.py  posts_type.py  ranking.py  ranking_summarizer.py  ranking_summary.py  reddit_posts.py  waller_scores.py
experiments/scripts/: run-truncate.sh  run.sh  texts-truncated.sh
experiments/tests/: conftest.py  experiment_stub.py  pytest.ini  test_dimension_generator.py  test_ranking.py  test_ranking_summarizer.py  test_ranking_summary.py  test_reddit_posts.py
getting-data/: getting_data.py  main.py  requirements.txt  truncate_data.py
getting-data/getting-data/: truncate_data.py
notebooks/: BIICC_Model_Metrics.ipynb  Timeness.ipynb  cohere-experiments.ipynb  cohere.ipynb  metrics.ipynb  plots.ipynb
pushshift-reddit-script/: app.py  dataset.py  file_handler.py  main.py  pushshift.py  pushshift_dataset.py  reddit_data_processor.py  requirements.txt  test_reddit_data_processor.py
scripts/: fasttext.sh  run-truncate.sh  run.sh  texts-truncated.sh
src/: generator_app.py  loader_app.py
src/experiments/: app.py  dimension_generator.py  fasttext_experiment.py  ranking.py  reddit_posts.py  requirements.txt
src/getting-data/: app.py  getting_data.py  requirements.txt  truncate_data.py
tests/: test_dimension_generator.py  test_ranking.py  test_reddit_posts.py
using-data/: comments_iterator.py  comments_to_texts.ipynb  embeddings_analysis.ipynb  subreddits_to_embeddings.ipynb
(+9 files in other folders)
