[tool.poetry]
name = "dimensions"
version = "0.1.8"
description = ""
authors = ["fddemarco <franco.demarco3400@gmail.com>"]
readme = "README.md"

[tool.setuptools]
packages = ["dimensions"]
package-dir = {"" = "src"}

[tool.poetry.scripts]
generator = "src.generator_app:app"
load = "src.loader_app:app"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
pandas = "^2.0.3"
pyarrow = "^12.0.1"
scikit-learn = "^1.3.0"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
click = "^8.1.4"
scipy = "^1.11.1"
numpy = "^1.25.1"
rbo = "^0.1.3"
pybind11 = "^2.10.4"
typer = {extras = ["all"], version = "^0.9.0"}
fasttext = {git = "https://github.com/cfculhane/fastText"}
black = "^23.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pylint = "^2.17.4"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-m 'not slow and not wip'"
markers = ["slow: Annotate the test as one that lingers", "wip: work-in progress feature"] 
testpaths = [
    "tests",
    "integration",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
